// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AvatarOverlay > snapshot: IDLE state 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center gap-1 select-none w-full h-full p-4"
    data-state="IDLE"
    data-testid="avatar-overlay"
    style="opacity: 0; transform: translateY(20px) scale(0.8);"
  >
    <div
      class="w-40 h-40 drop-shadow-lg"
    >
      <svg
        aria-label="NexusAI avatar"
        fill="none"
        role="img"
        viewBox="0 0 200 200"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <radialgradient
            cx="35%"
            cy="35%"
            id="headGradient"
          >
            <stop
              offset="0%"
              stop-color="#FFD700"
            />
            <stop
              offset="100%"
              stop-color="#FFA700"
            />
          </radialgradient>
        </defs>
        <circle
          cx="100"
          cy="100"
          fill="url(#headGradient)"
          r="90"
        />
        <circle
          cx="100"
          cy="100"
          fill="none"
          r="90"
          stroke="#FF9500"
          stroke-width="3"
        />
        <circle
          cx="72"
          cy="80"
          fill="#1a1a2e"
        />
        <circle
          cx="128"
          cy="80"
          fill="#1a1a2e"
        />
        <path
          d="M58,62 Q72,55 86,62"
          stroke="#1a1a2e"
          stroke-linecap="round"
          stroke-width="3"
        />
        <path
          d="M114,62 Q128,55 142,62"
          stroke="#1a1a2e"
          stroke-linecap="round"
          stroke-width="3"
        />
        <g
          transform="translate(100, 135)"
        >
          <g
            data-active="false"
            data-testid="mouth-A"
            style="display: none;"
          >
            <path
              d="M-12,0 Q0,2 12,0 Q0,-2 -12,0"
              fill="none"
              stroke="#1a1a2e"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-B"
            style="display: none;"
          >
            <path
              d="M-12,-4 Q0,8 12,-4"
              fill="none"
              stroke="#1a1a2e"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-C"
            style="display: none;"
          >
            <path
              d="M-10,-2 Q0,5 10,-2"
              fill="none"
              stroke="#1a1a2e"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-D"
            style="display: none;"
          >
            <path
              d="M-14,-6 Q0,12 14,-6"
              fill="none"
              stroke="#1a1a2e"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-E"
            style="display: none;"
          >
            <path
              d="M-14,-5 L14,-5 Q14,8 0,8 Q-14,8 -14,-5"
              fill="#1a1a2e"
              stroke="#1a1a2e"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-F"
            style="display: none;"
          >
            <path
              d="M-12,-4 L12,-4 M-8,2 Q0,6 8,2"
              fill="#1a1a2e"
              stroke="#1a1a2e"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-G"
            style="display: none;"
          >
            <path
              d="M-8,-3 Q0,6 8,-3 Q0,-6 -8,-3"
              fill="none"
              stroke="#1a1a2e"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-H"
            style="display: none;"
          >
            <path
              d="M-10,-4 Q0,10 10,-4 Q0,-8 -10,-4"
              fill="none"
              stroke="#1a1a2e"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </g>
          <g
            data-active="true"
            data-testid="mouth-X"
            style="display: block;"
          >
            <path
              d="M-12,0 Q0,-3 12,0"
              fill="none"
              stroke="#1a1a2e"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </g>
        </g>
        <circle
          cx="45"
          cy="110"
          fill="#FF69B4"
          fill-opacity="0.4"
          r="12"
        />
        <circle
          cx="155"
          cy="110"
          fill="#FF69B4"
          fill-opacity="0.4"
          r="12"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`AvatarOverlay > snapshot: PLAYING state with viseme B 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center gap-1 select-none w-full h-full p-4"
    data-state="PLAYING"
    data-testid="avatar-overlay"
    style="opacity: 0; transform: translateY(20px) scale(0.8);"
  >
    <div
      class="w-40 h-40 drop-shadow-lg"
    >
      <svg
        aria-label="NexusAI avatar"
        fill="none"
        role="img"
        viewBox="0 0 200 200"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <radialgradient
            cx="35%"
            cy="35%"
            id="headGradient"
          >
            <stop
              offset="0%"
              stop-color="#FFD700"
            />
            <stop
              offset="100%"
              stop-color="#FFA700"
            />
          </radialgradient>
        </defs>
        <circle
          cx="100"
          cy="100"
          fill="url(#headGradient)"
          r="90"
        />
        <circle
          cx="100"
          cy="100"
          fill="none"
          r="90"
          stroke="#FF9500"
          stroke-width="3"
        />
        <circle
          cx="72"
          cy="80"
          fill="#1a1a2e"
        />
        <circle
          cx="128"
          cy="80"
          fill="#1a1a2e"
        />
        <path
          d="M58,62 Q72,55 86,62"
          stroke="#1a1a2e"
          stroke-linecap="round"
          stroke-width="3"
        />
        <path
          d="M114,62 Q128,55 142,62"
          stroke="#1a1a2e"
          stroke-linecap="round"
          stroke-width="3"
        />
        <g
          transform="translate(100, 135)"
        >
          <g
            data-active="false"
            data-testid="mouth-A"
            style="display: none;"
          >
            <path
              d="M-12,0 Q0,2 12,0 Q0,-2 -12,0"
              fill="none"
              stroke="#1a1a2e"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </g>
          <g
            data-active="true"
            data-testid="mouth-B"
            style="display: block;"
          >
            <path
              d="M-12,-4 Q0,8 12,-4"
              fill="none"
              stroke="#1a1a2e"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-C"
            style="display: none;"
          >
            <path
              d="M-10,-2 Q0,5 10,-2"
              fill="none"
              stroke="#1a1a2e"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-D"
            style="display: none;"
          >
            <path
              d="M-14,-6 Q0,12 14,-6"
              fill="none"
              stroke="#1a1a2e"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-E"
            style="display: none;"
          >
            <path
              d="M-14,-5 L14,-5 Q14,8 0,8 Q-14,8 -14,-5"
              fill="#1a1a2e"
              stroke="#1a1a2e"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-F"
            style="display: none;"
          >
            <path
              d="M-12,-4 L12,-4 M-8,2 Q0,6 8,2"
              fill="#1a1a2e"
              stroke="#1a1a2e"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-G"
            style="display: none;"
          >
            <path
              d="M-8,-3 Q0,6 8,-3 Q0,-6 -8,-3"
              fill="none"
              stroke="#1a1a2e"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-H"
            style="display: none;"
          >
            <path
              d="M-10,-4 Q0,10 10,-4 Q0,-8 -10,-4"
              fill="none"
              stroke="#1a1a2e"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </g>
          <g
            data-active="false"
            data-testid="mouth-X"
            style="display: none;"
          >
            <path
              d="M-12,0 Q0,-3 12,0"
              fill="none"
              stroke="#1a1a2e"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </g>
        </g>
        <circle
          cx="45"
          cy="110"
          fill="#FF69B4"
          fill-opacity="0.4"
          r="12"
        />
        <circle
          cx="155"
          cy="110"
          fill="#FF69B4"
          fill-opacity="0.4"
          r="12"
        />
      </svg>
    </div>
  </div>
</div>
`;
